# gauth-server

./: .gitignore  Cargo.toml  README.md  config.ini.default  db.sql
src/: main.rs
src/alib/: config.rs  db.rs  error.rs  handler.rs  mod.rs
src/lib/: db.rs  error.rs  handler.rs  mod.rs
