[package]
name = "gauth-server"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3", features=["derive"] }
log = "0.4"
chrono = "0.4"
configparser = "3"
anyhow = { version="1", features=["std"] }
iron = "0.6"
router = "0.6"
json = "0.12"
google-authenticator = { version="0.3", features=["with-qrcode"] }
params = "0.8"
postgres = "0.19"
rand = "0.8"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
